--- a/src/docs/partials/change-log.html
+++ b/src/docs/partials/change-log.html
@@ -8,6 +8,7 @@
               href='https://github.com/Eonasdan/tempus-dominus/issues/2487'>#2487</a></li>
       <li>Fixed element toggle when input is disabled <a href='https://github.com/Eonasdan/tempus-dominus/issues/2495'>#2495</a></li>
       <li>Fixed jQuery no conflict <a href='https://github.com/Eonasdan/tempus-dominus/issues/2506'>#2506</a></li>
+      <li>Fixed options update <a href='https://github.com/Eonasdan/tempus-dominus/issues/2549'>#2549</a></li>
     </ul>
     <h3>New</h3>
     <ul>
