--- a/src/docs/partials/change-log.html
+++ b/src/docs/partials/change-log.html
@@ -1,6 +1,13 @@
 <page-body>
   <section>
     <h1>Version 6</h1>
+    <h2>Beta8</h2>
+    <h3>Bug Fixes</h3>
+    <ul>
+      <li>Fixed view mode. <a
+              href='https://github.com/Eonasdan/tempus-dominus/issues/2583'>#2583</a></li>
+      <li>Fixed and simplified options merging <a href='https://github.com/Eonasdan/tempus-dominus/issues/2578'>#2578</a></li>
+    </ul>
     <h2>Beta7</h2>
     <h3>Bug Fixes</h3>
     <ul>
