--- a/src/docs/partials/options.html
+++ b/src/docs/partials/options.html
@@ -486,6 +486,12 @@ new tempusDominus.TempusDominus(..., {
                     target or
                     clicking on on an outside element. This option will only work when time components are disabled.
                 </p>
+                <h3 id='theme'>theme<a class='anchor-link' aria-label='Anchor' href='#theme'><i
+                        class="fa-solid fa-anchor" aria-hidden="true"></i></a></h3>
+                <p>
+                    <strong>Accepts:</strong> 'light' | 'dark' | 'auto' <strong>Defaults:</strong> 'auto'<br/>
+                    Specifies which theme to use, light mode or dark mode. When set to auto, it will auto detect based on settings of the user's system.
+                </p>
             </div>
         </div>
     </section>
