--- a/src/docs/partials/change-log.html
+++ b/src/docs/partials/change-log.html
@@ -1,6 +1,13 @@
 <page-body>
   <section>
     <h1>Version 6</h1>
+    <h2>Beta9</h2>
+    <h3>Bug Fixes</h3>
+    <ul>
+      <li>Fixed jQuery provider. <a
+        href='https://github.com/Eonasdan/tempus-dominus/issues/2547'>#2547</a></li>
+      <li>Adds options for theme to fix <a href='https://github.com/Eonasdan/tempus-dominus/issues/2522'>#2522</a>. Big thanks to @matholum.</li>
+    </ul>
     <h2>Beta8</h2>
     <h3>Bug Fixes</h3>
     <ul>
