--- a/src/docs/partials/change-log.html
+++ b/src/docs/partials/change-log.html
@@ -8,6 +8,10 @@
         href='https://github.com/Eonasdan/tempus-dominus/issues/2547'>#2547</a></li>
       <li>Adds options for theme to fix <a href='https://github.com/Eonasdan/tempus-dominus/issues/2522'>#2522</a>. Big thanks to @matholum.</li>
     </ul>
+    <h3>New</h3>
+    <ul>
+      <li>Add fr locale via #2581</li>
+    </ul>
     <h2>Beta8</h2>
     <h3>Bug Fixes</h3>
     <ul>
