--- a/src/docs/partials/options.html
+++ b/src/docs/partials/options.html
@@ -1,8 +1,11 @@
 <page-body>
     <p>
-        Options can be provided during the inital setup through the constructor <code>new
+        Options can be provided during the initial setup through the constructor <code>new
         tempusDominus.TempusDominus(...,
         options);</code>. Take a look at the examples for more information.
+    </p>
+    <p>
+        The current options can be retrieved e.g. <code>datetimepicker1.optionsStore.options</code>.
     </p>
     <p>
         Options can be updated through the <a href='functions.html#updateOptions'><code>updateOptions</code>
