--- a/src/docs/partials/change-log.html
+++ b/src/docs/partials/change-log.html
@@ -7,6 +7,8 @@
       <li>Fixed jQuery provider. <a
         href='https://github.com/Eonasdan/tempus-dominus/issues/2547'>#2547</a></li>
       <li>Adds options for theme to fix <a href='https://github.com/Eonasdan/tempus-dominus/issues/2522'>#2522</a>. Big thanks to @matholum.</li>
+      <li>Fixed date view next/back button disabling when it shouldn't. <a
+        href='https://github.com/Eonasdan/tempus-dominus/issues/2595'>#2595</a></li>
     </ul>
     <h3>New</h3>
     <ul>
