--- a/src/docs/partials/change-log.html
+++ b/src/docs/partials/change-log.html
@@ -9,6 +9,13 @@
       <li>Adds options for theme to fix <a href='https://github.com/Eonasdan/tempus-dominus/issues/2522'>#2522</a>. Big thanks to @matholum.</li>
       <li>Fixed date view next/back button disabling when it shouldn't. <a
         href='https://github.com/Eonasdan/tempus-dominus/issues/2595'>#2595</a></li>
+      <li>Fixed component disabling issue <a
+        href='https://github.com/Eonasdan/tempus-dominus/issues/2502'>#2502</a></li>
+      <li>Changed default useTwentyfourHour to undefined. Now using DateTime.parts() to check if the view date has a "dayPeriod" property <a
+        href='https://github.com/Eonasdan/tempus-dominus/issues/2510'>#2510</a></li>
+      <li>Fixed 24-hour 24/0 formatting
+        <a href='https://github.com/Eonasdan/tempus-dominus/issues/2563'>#2563</a> | <a href='https://github.com/Eonasdan/tempus-dominus/issues/2563'>#2563</a>
+      </li>
     </ul>
     <h3>New</h3>
     <ul>
