--- a/src/docs/partials/change-log.html
+++ b/src/docs/partials/change-log.html
@@ -16,6 +16,12 @@
       <li>Fixed 24-hour 24/0 formatting
         <a href='https://github.com/Eonasdan/tempus-dominus/issues/2563'>#2563</a> | <a href='https://github.com/Eonasdan/tempus-dominus/issues/2563'>#2563</a>
       </li>
+      <li>Fixed none latin number selection in the minute picker
+        <a href='https://github.com/Eonasdan/tempus-dominus/issues/2576'>#2576</a>
+      </li>
+      <li>Fixed input value to view date object reference
+        <a href='https://github.com/Eonasdan/tempus-dominus/issues/2568'>#2568</a>
+      </li>
     </ul>
     <h3>New</h3>
     <ul>
