--- a/src/docs/partials/change-log.html
+++ b/src/docs/partials/change-log.html
@@ -26,6 +26,11 @@
     <h3>New</h3>
     <ul>
       <li>Add fr locale via #2581</li>
+      <li>Updated and published NuGet package.</li>
+    </ul>
+    <h3>Breaking changes</h3>
+    <ul>
+      <li>Renamed /src/sass to /src/scss to more accurately reflect code.</li>
     </ul>
     <h2>Beta8</h2>
     <h3>Bug Fixes</h3>
