--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,5 +1,6 @@
 $td-light: #fff !default;
 $td-widget-background: $td-light !default;
+$td-font-color: #000 !default;
 $td-timepicker-font-size: 1.2em !default;
 $td-active-bg: #0d6efd !default;
 $td-active-color: $td-light !default;
