--- a/src/docs/partials/namespace/index.html
+++ b/src/docs/partials/namespace/index.html
@@ -1,7 +1,7 @@
 <page-body>
   <section>
     <p>
-      Tempus Dominus uses and exposes a Namespace class for consistancy and easy reference.
+      Tempus Dominus uses and exposes a Namespace class for consistency and easy reference.
     </p>
     <p>
       These values are provide via <code>tempusDominus.Namespace</code>
@@ -10,10 +10,6 @@
   <section>
     <h2>NAME</h2>
     <p>Returns <code>tempus-dominus</code>.</p>
-
-    <h2>version</h2>
-    <p>Returns the current version of the picker.</p>
-
     <h2>dataKey</h2>
     <p>Returns <code>td</code>. This is used as a suffix for events e.g. <code>change.td</code>.</p>
 
@@ -31,7 +27,7 @@
 <page-meta>
   <title>Namespace</title>
   <post-date>07/08/2021</post-date>
-  <update-date>07/08/2021</update-date>
+  <update-date>07/20/2022</update-date>
   <excerpt>
     Overview of the Namespace for Tempus Dominus.
   </excerpt>
