--- a/src/docs/partials/plugins/fa5.html
+++ b/src/docs/partials/plugins/fa5.html
@@ -35,7 +35,7 @@
       </div>
       <script src='/6/js/plugins/fa-five.js'></script>
       <script type='text/javascript'>
-        tempusDominus.extend(window.tempusDominus.plugins.fa_five);
+        tempusDominus.extend(window.tempusDominus.plugins.fa_five.load);
         const datetimepicker1 = new tempusDominus.TempusDominus(document.getElementById('datetimepicker1'));
       </script>
     </section>
@@ -45,13 +45,13 @@
 const datetimepicker1 = new tempusDominus.TempusDominus(document.getElementById(&#39;datetimepicker1&#39;));
 
 //to set globally
-tempusDominus.extend(window.tempusDominus.plugins.fa_five);
+tempusDominus.extend(window.tempusDominus.plugins.fa_five.load);
 //or
-import {load, fasixIcons} from 'tempusDominus/plugins/fa-five'
+import {load, faFiveIcons} from 'tempusDominus/plugins/fa-five'
 tempusDominus.extend(load);
 
 // otherwise to set icons to an individual picker
-datetimepicker1.updateOptions({ display: icons: window.tempusDominus.plugins.fa_five.fasixIcons});
+datetimepicker1.updateOptions({ display: icons: window.tempusDominus.plugins.fa_five.faFiveIcons});
 //or
 datetimepicker1.updateOptions({ display: icons: faFiveIcons});
 </code>
@@ -122,9 +122,9 @@ datetimepicker1.updateOptions({ display: icons: faFiveIcons});
 </page-body>
 
 <page-meta>
-  <title>Plugins - Font Awesome 6</title>
+  <title>Plugins - Font Awesome 5</title>
   <post-date>01/19/2022</post-date>
-  <update-date>01/19/2022</update-date>
+  <update-date>07/22/2022</update-date>
   <excerpt>How to use font awesome 6 plugin with Tempus Dominus.
   </excerpt>
   <tags>datepicker, javascript, open source, tempus dominus, eonasdan</tags>
