--- a/src/docs/partials/examples/index.html
+++ b/src/docs/partials/examples/index.html
@@ -1596,8 +1596,6 @@ const subscription = linked2.subscribe(tempusDominus.Namespace.events.change, (e
           components: {
             clock: false,
             date: false
-            // hours:false,
-            // minutes:false,
           }
         }
       });
@@ -2596,8 +2594,7 @@ loadPluginButton.addEventListener(&#39;click&#39;, () =&gt; {
 
     </script>
   </section>
-
-  <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css'>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 </page-body>
 
 <page-meta>
