--- a/src/docs/partials/examples/index.html
+++ b/src/docs/partials/examples/index.html
@@ -2059,7 +2059,7 @@ const subscription = linked2.subscribe(tempusDominus.Namespace.events.change, (e
     <p>
       You can provide a new set of options by calling <code>updateOptions([newOptions])</code>. This function also
       allows you to reset the options back to the default or merge the new options with the default instead of the
-      existing uptions by passing <code>true</code> as the section parameter.
+      existing options by passing <code>true</code> as the section parameter.
     </p>
 
     <div class='code-blocks d-none'>
