--- a/src/docs/partials/repl.html
+++ b/src/docs/partials/repl.html
@@ -223,14 +223,14 @@
         <li><a href='javascript:updateRepl("N4IgVgzgwg9gdgMwJYHMDycA2BPEAuAFwCcBXAUwBpwJ8QATJCAB0wENs8ACYAHTk4GcCACzIBbMlwDkdVkQDWUvgIC+IKsIJjMtdSE3aAcjAJlaAHiYA+ACqiJ5gPTXLVgJowSnAMat+rTAgYTmYybyQEbCFRaPEyTgQYIljOJiRveTIiADonaz4QFSA")'
                class='d-inline-flex align-items-center rounded' aria-current='page'>Theme</a></li>
 
-        <li><a href='javascript:updateRepl("")'
-               class='d-inline-flex align-items-center rounded' aria-current='page'></a></li>
+        <li><a href='javascript:updateRepl("N4IgVgzgwg9gdgMwJYHMDycA2BPEAuAFwCcBXAUwBpwJ8QBbEzApAB0zIBEBDAsiPAATFyIKgAsCdTLVEgJUgHIxetADwsAfAFlGzNmQHdeEVQHpN6jQBUxBlkgDGAazJEBXTJhgB3CAIQwbgxMrOwCACY8fEIwAgBGBhBk7A684QB0ZpoAOnAgAL5AA")'
+               class='d-inline-flex align-items-center rounded' aria-current='page'>Multiple Dates</a></li>
 
-        <li><a href='javascript:updateRepl("")'
-               class='d-inline-flex align-items-center rounded' aria-current='page'></a></li>
+        <li><a href='javascript:updateRepl("N4IgVgzgwg9gdgMwJYHMDycA2BPEAuBAQ0wgFMAacCfEJAWwAcYAnAFwAJh2AVUxgVwgARGHSRxB7AL7sEzUewDkAAVLxCEACaE4AelZ8GggLSbR4wYoDcAHTh2AxvAgcHACx0pSaBqyTOAIX5WVnh2AF52Mwd+OlI4VgA6L1YAUUw+eNYA7ABJTQAKRXdPb19-OAhFAEpbOCdKjjIQ8XRy5wAFJAcAa1JmCPY4UgB3HkNBETEJCALo2Kzk0jSMuISc-KLtAz84hm6+5gBGGtq7OwyOMMiiElJHDzgvHz9A4NC4RMJNTVSANyyABkkC54v0ig5MAdFOR2AVqhEAHycOzNPxPF4VCBdXr9RL8BjbMqvSoFYB2ZikFzMbokiB4FFwbTYCBoBAAdVIpB6QhBhAARhlNAywgB+dgAbQAuuwGRKAAywgBsUrsUjVZzg13YAEJ4HUSk9iVigiF4IlIRoIMCXIlQigUBkivzWHBjAwaXRCMxsDUDY9nu1KqaPhbMFabUl7Y7SM7XcYyA1tD6-RqrCBKG5WHRMDQADzh-mkTCyFjhGwgIm7Uj7XHHXJwIysCvsS0QCDlkAIFh0YyF4sVxE4w553T9zCIux5zRIP6OcPtzviJvGFDyAnsTAwFDGUgAhIVuxITSdqv0GsHfpHQ9MwisQjGViaR-elLGZfBTvDb1U5sgOzbA+T4vswb7RhkX6kD+Lg3pOcB5h+zZwMep53ss561ocRwNk2N6sNgDCkJ2BgAB5-vOVqdt2zC9g0rDyJgN6AY+z73qByydgAxGeeyXscN66HBeYQAwOgUYuFaIau64MI+pBkUxd5Aaxr4cRW3FodWmFXop94sY+24xqhOwYXxsFTkgrYLh2FZEBAsgPg4xDxMmg6jkgQm6CJOieTOfxCX5VmUYo8hjHQrDGAAzIoAWzkFi7FDAmAJr2SoxVO-LvGEKHFAGxrOIo8UdooLpwOwpXup63q+oi3CGRkUR8oKpCaOwIxcn0TIQKOmVmnAvmzgN-kZiAWY5gAcjABj5gwiIAKqEmh7AwEG3W6LNeazewACaMD8K2OjsB6MB-MepDsIQQyjOwzTLQgy2reV2AHZgUJPOweZOJopCIgSRKYs4BQSsMIwA5UUrVKOX0-YkPBuCCsj8PUJIXSQMB2OwqNbiM9nYHt7ChOwlK3awbjnStdLlYQvQEzABNk1EpBEPwmBXAMcTsfT50gw9lMjEgpNc4zzOs+w4igt8d1C-JILoigvNYk9R1Wq0H3Q4i9H8KQUMwN9yIaELiYo6JzCEHEBjMIko6zXYIBSEAA")'
+               class='d-inline-flex align-items-center rounded' aria-current='page'>Update Options</a></li>
 
-        <li><a href='javascript:updateRepl("")'
-               class='d-inline-flex align-items-center rounded' aria-current='page'></a></li>
+        <li><a href='javascript:updateRepl("N4IgVgzgwg9gdgMwJYHMDycA2BPEAuAFwCcBXAUwBpwJ8QBjeAgQyTjKLwAIATGOkgLZk4BAHQBHckWwBlMpjJ0CMIgAoA5NyQA3AMQAHJkWEEAtAxEs2RdQEoQVABYEBmWgB4t2zkm4BedUNjEXNGK3Z1TjpMJggIAOMYgh0yTn1TAFZIiAJsBQCYbXYETBgAdy4mEmUAbk5HMlRnLgBGAAY2-QAPOrLfAkdWjoBSGvUAPgAdOE5OdxiAI3lOBBUAi2ZWdgARJgIyAAUkOgBrdgBJOH1qifcAekX5KZm5ryiYuIDWa7MUIhgSPpOKUUKYyEURJFfOswlsiLt9kdThEeHsmKYCNwMUYUGQzN9qgE2EYyDl1NNZpTZtw0RiscwiLizMoUCh8upicYyc8qe4CQQfP51BtwvC9odjmciJcfpFcvoyAF9l0CJForF4upVkQBKERP9MJE7jzKe4IIYZurPup+aY-gD0srVajmHTsYy8QFdBA8ck4Oh9Ml4BByS8qVSaa7MRiYKz2ZG8UghPpJRETbzzUxLR9NQh0RAYJhfCt0XQmAo4DSbON7pm4Om5nc6yb7l5nq2dOMHCBnK4AHIwfYefTjA4kkScWCWOH3EfuEcATQBUSznHNiiQCGwPgQnAGqRTyKIa8cAMw3E4S04e2YdAaF+Ue4aPD4ghMl5g3G3Kmva4VdE3Y5OHkMghBEURZ2eEAAF8gA")'
+               class='d-inline-flex align-items-center rounded' aria-current='page'>Parent Container</a></li>
 
         <li><a href='javascript:updateRepl("")'
                class='d-inline-flex align-items-center rounded' aria-current='page'></a></li>
